feat(notebook): add Kmeans++ algorithm in jupyter notebook

--- a/KMeans Clustering From Scratch.ipynb
+++ b/KMeans Clustering From Scratch.ipynb
@@ -113,6 +113,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### KMeans++ Algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def euler_distance(point1: list, point2: list) -> float:\n",
+    "    \"\"\"\n",
+    "    计算两点之间的欧拉距离，支持多维\n",
+    "    \"\"\"\n",
+    "    distance = 0.0\n",
+    "    for a, b in zip(point1, point2):\n",
+    "        distance += math.pow(a - b, 2)\n",
+    "    return math.sqrt(distance)\n",
+    "\n",
+    "def get_closest_dist(point, centroids):\n",
+    "    min_dist = math.inf  # 初始设为无穷大\n",
+    "    for i, centroid in enumerate(centroids):\n",
+    "        dist = euler_distance(centroid, point)\n",
+    "        if dist < min_dist:\n",
+    "            min_dist = dist\n",
+    "    return min_dist\n",
+    "\n",
+    "def kpp_centers(data_set: list, k: int) -> list:\n",
+    "    \"\"\"\n",
+    "    从数据集中返回 k 个对象可作为质心\n",
+    "    \"\"\"\n",
+    "    cluster_centers = []\n",
+    "    cluster_centers.append(random.choice(data_set))\n",
+    "    d = [0 for _ in range(len(data_set))]\n",
+    "    for _ in range(1, k):\n",
+    "        total = 0.0\n",
+    "        for i, point in enumerate(data_set):\n",
+    "            d[i] = get_closest_dist(point, cluster_centers) # 与最近一个聚类中心的距离\n",
+    "            total += d[i]\n",
+    "        total *= random.random()\n",
+    "        for i, di in enumerate(d): # 轮盘法选出下一个聚类中心；\n",
+    "            total -= di\n",
+    "            if total > 0:\n",
+    "                continue\n",
+    "            cluster_centers.append(data_set[i])\n",
+    "            break\n",
+    "    return cluster_centers"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Read dataset"
    ]
   },
