feat(notebook): add Kmeans++ algorithm in jupyter notebook

--- a/KMeans Clustering From Scratch.ipynb
+++ b/KMeans Clustering From Scratch.ipynb
@@ -158,7 +158,38 @@
     "                continue\n",
     "            cluster_centers.append(data_set[i])\n",
     "            break\n",
-    "    return cluster_centers"
+    "    return cluster_centers\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_kmeans_pp_centroids(X1,k = 5):\n",
+    "    centroids = X1.sample()\n",
+    "    print(centroids)\n",
+    "    i = 1\n",
+    "    dist = []\n",
+    "    while i != k:\n",
+    "        max_dist = [0,0]\n",
+    "        #go through the centroids\n",
+    "        for index, row in centroids.iterrows():\n",
+    "            #calculate distance of every centroid with every other data point \n",
+    "            d = np.sqrt((X1[\"Height\"] - row[\"Height\"])**2 +(X1[\"Weight\"] - row[\"Weight\"])**2)\n",
+    "            #check which centroid has a max distance with another point\n",
+    "            if max(d) > max(max_dist):\n",
+    "                max_dist = d\n",
+    "\n",
+    "        X1 = pd.concat([X1, max_dist], axis = 1)\n",
+    "        idx = X1.iloc[:,i+1].idxmax()\n",
+    "        max_coor = pd.DataFrame(X1.iloc[idx][[\"Height\", \"Weight\"]]).T\n",
+    "        centroids = pd.concat([centroids,max_coor])\n",
+    "        X1 = X1.drop(idx)\n",
+    "        i+=1\n",
+    "    return centroids"
    ]
   },
   {
